--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -14,15 +14,21 @@ body {
   }
   #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
   }   
   
   header{
     background-color:#7C9885;
+    display: grid;
+    grid-template-columns: 150px auto;
   }
   nav {
     background-color: #033F63;
     padding: 10px;
-    text-align: center
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
   }
   nav a{
     background-color: #033F63;
@@ -69,6 +75,11 @@ body {
     background-color: #033F63;
     color: #FEDC97;
     padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
   }
   #content{
     max-width:1600px;
@@ -77,12 +88,19 @@ body {
   #background {
     height: 725px;
     background-color: #7C9885;
+    grid-column: 1/11;
+    grid-row:4/9;
 }
 .button-box{
   text-align: center;
 }
 main section{
   text-align: center;
+}
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px; 
 }
 #hero-msg h1, #hero-msg h4{
   text-align: center;
@@ -91,6 +109,13 @@ main section{
   background-color: #033F63;
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+.home-grid{
+display: grid;
+grid-template-columns: repeat(10,1fr);
 }
 .home-title{
   color:#FEDC97;
@@ -119,6 +144,19 @@ color: #FEDC97;
 #hero-img{
   width: 100%;
 }
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
+#hero-msg h4 {
+  color: white;
+}
+#hero-msg {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  margin-top: 100px;
+}
 footer p {
   font-size: 1.2em;
 }    
@@ -131,7 +169,76 @@ footer .social img{
 }
 .card-img {
   border: 10px solid #d9c2a3;
+  transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+  opacity: .6;
+  transform: scale(1.1);
 }
 main section img {
   box-sizing: border-box;
 }
+.card-img, .mountains {
+  width: 100%;
+}
+.rivers-card{
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+}
+.camping-card{
+  grid-column: 5/7;
+  grid-row: 2/3;
+}
+.rapids-card{
+  grid-column: 8/10;
+  grid-row: 2/3;
+}
+.mountains{
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #6f7364;
+
+}
+@media screen and (max-width: 900px) {
+  #hero, .home-grid {
+      display: block;
+      height: auto;
+  }
+  nav, footer {
+      flex-direction: column;
+  }
+  nav a {
+      display: block;
+      padding: 15px;
+  }
+  #hero {
+      margin-top: 0;
+  }
+  #hero-msg {
+      margin-top: 0;
+  }
+  #hero-msg h4 {
+      display: none;
+  }
+  .home-title {
+      font-size: 25px;
+      color: #6f7364;
+  }
+  .rivers-card, .camping-card, .rapids-card { 
+      margin: 50px auto;
+      width: 60%;
+  }
+  #background {
+      display: none;
+  }
+  .mountains, .msg {
+      width: 80%;
+      display: block;
+      margin: 0 auto;
+  }
+  footer {
+      margin-top: 25px;
+  }
+}
+          
