--- a/wrr/styles/ice.css
+++ b/wrr/styles/ice.css
@@ -1,39 +1,38 @@
 .grid-container {
     display: grid;
     margin: 0 auto;
+    width:300px;
+    grid-template-rows: auto auto auto;
+
+    background-color: azure;
+   
+  }
   
-    grid-template-columns: 1fr 1fr;
-   
-   
-  }
   h1{
-    grid-column: 1/3;
-    grid-row: 1/2;
-    margin: auto;
-    z-index: 1;
-    letter-spacing: .4em;
     
-    font-size: 6em;
-  }
-  h2{
-    margin: auto;
-  }
-  img{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    width: 100%;
-  }
-  .item2{
-    padding-top: 600px;
-    color: red;
+    grid-row: 2/3;
+    font-size: 2em;
     text-align: center;
-    letter-spacing: 2rem;
-    font-size: 5em;
-    grid-column: 2/3;
-    grid-row: 1/3;
   }
-  .shadow{
-    background-color: grey;
-    grid-column: 2/3;
-    grid-row:1/2
+  .headerp{
+    color:navy;
   }
+body{
+  background-color: black;
+  
+}
+img{
+  margin: 0 auto;
+  width: auto;
+}
+p{
+  text-align: center;
+}
+.body-text{
+color:gray;
+font-size: 1.2em;
+
+}
+.bottom-grid{
+  display: grid;
+}
