--- a/personal_site_plan/site-plan.css
+++ b/personal_site_plan/site-plan.css
@@ -177,3 +177,34 @@ nav a:hover {
 img{
     width:40%;
 }
+
+footer {
+  background-color: #653239;
+  color: #E2D4BA;
+  padding: 25px 50px;
+  margin-top: 200px; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+footer p {
+  font-size: 1.2em;
+  color: #E2D4BA;
+}    
+   
+footer p a:hover {
+  text-decoration: underline;
+}   
+footer .social img{
+     padding-top: 15px;
+     display: flex;
+}
+
+footer a{
+  color: #E2D4BA;
+  text-decoration: none;
+  }
+  footer a:hover{
+  color: #E2D4BA;
+  }
