--- a/personal_site_plan/personal_site_style.css
+++ b/personal_site_plan/personal_site_style.css
@@ -109,6 +109,7 @@ nav {
   font-size: 1.2em;
   list-style-type: none;
   display: flex;
+ 
 }
 
 nav a {
@@ -116,6 +117,7 @@ nav a {
   min-width: 120px;
   text-decoration: none;
   padding: 10px;
+  font-family: var(--paragraph-font);
 
 }
 nav a:link, nav a:visited {
@@ -212,3 +214,99 @@ footer a{
     width: 80px;
 
   }
+.box1{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.box1 h1{
+  grid-column: 2/3;
+  padding-top: 20px;
+}
+.box1 p{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+}
+.box1 img{
+  width: 450px;
+}
+.box2{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-bottom: 20px;
+}
+.box2 h1{
+  grid-column: 2/3;
+}
+.box2 p{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+}
+.box2 img{
+  padding-top: 350px;
+  width: 450px;
+  grid-column: 1/2;
+  grid-row: 1/3;
+
+}
+.box3{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-bottom: 50px;
+}
+.box3 h1{
+  grid-column: 2/3;
+  padding-top: 20px;
+}
+.box3 p{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+}
+.box3 img{
+  width: 450px;
+  padding-top: 20px;
+}
+.box4{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-bottom: 20px;
+}
+.box4 h1{
+  grid-column: 2/3;
+}
+.box4 p{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+}
+.box4 img{
+padding-top: 100px;
+  width: 450px;
+  grid-column: 1/2;
+  grid-row: 1/3;
+
+}
+.imagebox{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  margin:0 auto;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.imagebox img{
+  width: 500px;
+  padding: 10px 10px 10px 10px;
+}
+.coloredtext{
+  color:var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+  width: 800px;
+  margin:0 auto;
+}
