--- a/personal_site_plan/personal_site_style.css
+++ b/personal_site_plan/personal_site_style.css
@@ -39,7 +39,13 @@ body {
 }
 .box1 img, .box2 img, .box3 img, .box4 img{
   box-shadow: 0 0 0 5px #AF7A6D;
+  
 }
+.box1 img:hover, .box2 img:hover, .box3 img:hover, .box4 img:hover{
+  transform: scale(1.3);
+}
+
+
 img {
   display: block;
   margin: 0 auto;
@@ -58,12 +64,15 @@ hr {
   background: var(--accent1-color);
 }
 header {
-  padding: 1em;
+
   text-align: center;
   color: var(--headline-color-on-color);
   background-color: var(--paragraph-background-color);
   display: grid;
   grid-template-columns: 150px auto;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
 }
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
@@ -113,6 +122,9 @@ nav {
   font-size: 1.2em;
   list-style-type: none;
   display: flex;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width:100%;
  
  
 }
@@ -217,7 +229,12 @@ footer a{
   color: #E2D4BA;
   }
   .logo{
-    width: 80px;
+    width: 85px;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0;
+    left: 0;
+    z-index: 1;
+  
 
   }
 .box1{
@@ -320,8 +337,4 @@ padding-top: 100px;
   background-color: var(--paragraph-background-color);
   width: 800px;
   margin:0 auto;
-}
-img:hover{
-  
-  transform: scale(1.3);
 }
