--- a/personal_site_plan/personal_site_style.css
+++ b/personal_site_plan/personal_site_style.css
@@ -37,11 +37,11 @@ body {
   font-size: 18px;
   text-align: center;
 }
-.box1 img, .box2 img, .box3 img, .box4 img{
+.box1 img, .box2 img, .box3 img, .box4 img, .imagebox img{
   box-shadow: 0 0 0 5px #AF7A6D;
   
 }
-.box1 img:hover, .box2 img:hover, .box3 img:hover, .box4 img:hover{
+.box1 img:hover, .box2 img:hover, .box3 img:hover, .box4 img:hover, .imagebox img:hover{
   transform: scale(1.3);
 }
 
@@ -284,6 +284,7 @@ footer a{
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding-bottom: 50px;
+ 
 }
 .box3 h1{
   grid-column: 2/3;
@@ -297,7 +298,11 @@ footer a{
 }
 .box3 img{
   width: 450px;
-  padding-top: 20px;
+ 
+  display: block;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
 }
 .box4{
   display: grid;
@@ -312,12 +317,14 @@ footer a{
   grid-row: 2/3;
   color: var(--paragraph-color-on-color);
   background-color: var(--paragraph-background-color);
+  
 }
 .box4 img{
-padding-top: 100px;
+
   width: 450px;
   grid-column: 1/2;
-  grid-row: 1/3;
+  grid-row: 2/3;
+  margin: auto;
 
 }
 .imagebox{
@@ -330,11 +337,14 @@ padding-top: 100px;
 }
 .imagebox img{
   width: 500px;
-  padding: 10px 10px 10px 10px;
+  
 }
 .coloredtext{
   color:var(--paragraph-color-on-color);
   background-color: var(--paragraph-background-color);
   width: 800px;
   margin:0 auto;
+}
+.heading{
+  font-size: 3em;
 }
